iFeature Pro Changelog

****************************

Version 3.1 (12-30-11)
-Revised metabox code/styling. 
-Removed border-left on OL comment lists.
-Added rel=me to social icon URLs.
-Fix for comment pingbacks, moved custom comment function to Core functions file.

Version 3.0.5 (12-13-11)
-Changes to CyberChimps Core Framework. 
-Additional visual tweaks for WordPress 3.3.
-Moved menu JavaScript code. 
-Removed extra localization function in theme functions file. 
-Minor tweak to comments hook. 
-Minor HTML markup tweak.
-Removed 404 image.
-Fixed slider caption bug on index page. 
-Fixed BBPress bug.

Version 3.0.4 (12-09-11)
-Removed cursor: pointer; from all iMenu css. 
-Fixed menu grid variable when search and home button are disabled. 
-Removed special charcters filter from Custom CSS option.
-Added class to archive title H2 tags. 
-Fixed post formats icon bug. 
-Added link hover color option.
-jQuery no-conflict fix.
-Centered theme options panel, added WordPress 3.3 fix. 
-Button shortcode css. 

Version 3.0.3 (12-01-11)
-Various IE visual fixes.
-General bug fixes and style changes. 

Version 3.0.2 (11-30-11)
-Fix for child theme support.
-Posts with no title will now display "Untitled".
-Fixed UL styling bug. 
-PHP tag fixes for Windows Server support.
-Fixed jQuery no-conflict issue in the slider (not sure how undone).
-Fixed bug related to previous Featured Image fix.
-Fixed some theme elements not showing upon activation: header, footer, post byline elements. 
-Added fix for non-keymaster admins not having access to theme option in multisite installs. 
-Added missing No Tile option to custom backgrounds. 
-Added option to enable/disable post pagination links, fixed text overlap for long post titles. 
-Fixed slider thumbnail issue, also now hiding slider nav div if navigation disabled. 
-Adjusted several option names for more clarity. 
-Added secondary option to toggle afterfooter independent from footer. 