@@ -7,6 +7,7 @@ Version 3.1 (12-30-11)
 -Removed border-left on OL comment lists.
 -Added rel=me to social icon URLs.
 -Fix for comment pingbacks, moved custom comment function to Core functions file.
+-Fixed callout color options, added option for callout button text color. 
 
 Version 3.0.5 (12-13-11)
 -Changes to CyberChimps Core Framework. 
